--- a/kernel/GNUmakefile
+++ b/kernel/GNUmakefile
@@ -12,11 +12,6 @@ ARCH := x86_64
 # Install prefix; /usr/local is a good, standard default pick.
 PREFIX := /usr/local
 
-# Check if the architecture is supported.
-ifeq ($(filter $(ARCH),aarch64 loongarch64 riscv64 x86_64),)
-    $(error Architecture $(ARCH) not supported)
-endif
-
 # User controllable C compiler command.
 CC := cc
 
@@ -26,10 +21,8 @@ CFLAGS := -g -O2 -pipe
 # User controllable C preprocessor flags. We set none by default.
 CPPFLAGS :=
 
-ifeq ($(ARCH),x86_64)
-    # User controllable nasm flags.
-    NASMFLAGS := -F dwarf -g
-endif
+# User controllable nasm flags.
+NASMFLAGS := -F dwarf -g -Wall
 
 # User controllable linker flags. We set none by default.
 LDFLAGS :=
@@ -66,71 +59,24 @@ override CPPFLAGS := \
     -MMD \
     -MP
 
-ifeq ($(ARCH),x86_64)
-    # Internal nasm flags that should not be changed by the user.
-    override NASMFLAGS += \
-        -Wall
-endif
-
 # Architecture specific internal flags.
-ifeq ($(ARCH),x86_64)
-    ifeq ($(CC_IS_CLANG),1)
-        override CC += \
-            -target x86_64-unknown-none
-    endif
-    override CFLAGS += \
-        -m64 \
-        -march=x86-64 \
-        -mno-80387 \
-        -mno-mmx \
-        -mno-sse \
-        -mno-sse2 \
-        -mno-red-zone \
-        -mcmodel=kernel
-    override LDFLAGS += \
-        -Wl,-m,elf_x86_64
-    override NASMFLAGS += \
-        -f elf64
+ifeq ($(CC_IS_CLANG),1)
+	override CC += \
+		-target x86_64-unknown-none
 endif
-ifeq ($(ARCH),aarch64)
-    ifeq ($(CC_IS_CLANG),1)
-        override CC += \
-            -target aarch64-unknown-none
-    endif
-    override CFLAGS += \
-        -mgeneral-regs-only
-    override LDFLAGS += \
-        -Wl,-m,aarch64elf
-endif
-ifeq ($(ARCH),riscv64)
-    ifeq ($(CC_IS_CLANG),1)
-        override CC += \
-            -target riscv64-unknown-none
-        override CFLAGS += \
-            -march=rv64imac
-    else
-        override CFLAGS += \
-            -march=rv64imac_zicsr_zifencei
-    endif
-    override CFLAGS += \
-        -mabi=lp64 \
-        -mno-relax
-    override LDFLAGS += \
-        -Wl,-m,elf64lriscv \
-        -Wl,--no-relax
-endif
-ifeq ($(ARCH),loongarch64)
-    ifeq ($(CC_IS_CLANG),1)
-        override CC += \
-            -target loongarch64-unknown-none
-    endif
-    override CFLAGS += \
-        -march=loongarch64 \
-        -mabi=lp64s
-    override LDFLAGS += \
-        -Wl,-m,elf64loongarch \
-        -Wl,--no-relax
-endif
+override CFLAGS += \
+	-m64 \
+	-march=x86-64 \
+	-mno-80387 \
+	-mno-mmx \
+	-mno-sse \
+	-mno-sse2 \
+	-mno-red-zone \
+	-mcmodel=kernel
+override LDFLAGS += \
+	-Wl,-m,elf_x86_64
+override NASMFLAGS += \
+	-f elf64
 
 # Internal linker flags that should not be changed by the user.
 override LDFLAGS += \
@@ -146,13 +92,9 @@ override LDFLAGS += \
 override SRCFILES := $(shell cd src && find -L * -type f | LC_ALL=C sort)
 override CFILES := $(filter %.c,$(SRCFILES))
 override ASFILES := $(filter %.S,$(SRCFILES))
-ifeq ($(ARCH),x86_64)
 override NASMFILES := $(filter %.asm,$(SRCFILES))
-endif
 override OBJ := $(addprefix obj-$(ARCH)/,$(CFILES:.c=.c.o) $(ASFILES:.S=.S.o))
-ifeq ($(ARCH),x86_64)
 override OBJ += $(addprefix obj-$(ARCH)/,$(NASMFILES:.asm=.asm.o))
-endif
 override HEADER_DEPS := $(addprefix obj-$(ARCH)/,$(CFILES:.c=.c.d) $(ASFILES:.S=.S.d))
 
 # Default target. This must come first, before header dependencies.
@@ -177,12 +119,10 @@ obj-$(ARCH)/%.S.o: src/%.S GNUmakefile
 	mkdir -p "$$(dirname $@)"
 	$(CC) $(CFLAGS) $(CPPFLAGS) -c $< -o $@
 
-ifeq ($(ARCH),x86_64)
 # Compilation rules for *.asm (nasm) files.
 obj-$(ARCH)/%.asm.o: src/%.asm GNUmakefile
 	mkdir -p "$$(dirname $@)"
 	nasm $(NASMFLAGS) $< -o $@
-endif
 
 # Remove object files and the final executable.
 .PHONY: clean
