--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,10 +1,8 @@
 # Nuke built-in rules and variables.
 MAKEFLAGS += -rR
 
-override OUTPUT := kernel
-
-# Target architecture to build for. Default to x86_64.
-ARCH := x86_64
+BUILD_FOLDER := bin
+KERNEL_FILE := kernel
 
 # User controllable C compiler command.
 CC := cc
@@ -46,41 +44,36 @@ LDFLAGS := -Wl,-m,elf_x86_64 \
 	-static \
 	-z max-page-size=0x1000 \
 	-Wl,--gc-sections \
-	-T linker-$(ARCH).ld
+	-T linker-x86_64.ld
 
 # Use "find" to glob all *.c, *.S, and *.asm files in the tree and obtain the
 # object and header dependency file names.
 override SRCFILES := $(shell cd src && find -L * -type f | LC_ALL=C sort)
 override CFILES := $(filter %.c,$(SRCFILES))
 override C3FILES := $(filter %.c3,$(SRCFILES))
-override OBJ := $(addprefix obj-$(ARCH)/,$(C3FILES:.c3=.c3.o) $(CFILES:.c=.c.o))
-override HEADER_DEPS := $(addprefix obj-$(ARCH)/,$(CFILES:.c=.c.d))
+override OBJ := $(addprefix $(BUILD_FOLDER)/,$(C3FILES:.c3=.c3.o) $(CFILES:.c=.c.o))
+override HEADER_DEPS := $(addprefix $(BUILD_FOLDER)/,$(CFILES:.c=.c.d))
 
 # Default target. This must come first, before header dependencies.
-.PHONY: all
-all: bin-$(ARCH)/$(OUTPUT)
+all: $(BUILD_FOLDER)/$(KERNEL_FILE)
 
 # Include header dependencies.
 -include $(HEADER_DEPS)
 
 # Link rules for the final executable.
-bin-$(ARCH)/$(OUTPUT): Makefile linker-$(ARCH).ld $(OBJ)
+$(BUILD_FOLDER)/$(KERNEL_FILE): Makefile linker-x86_64.ld $(OBJ)
 	mkdir -p "$$(dirname $@)"
 	$(CC) $(CFLAGS) $(LDFLAGS) $(OBJ) -o $@
 
-## TODO: Cambiar el Makefile para usar sólo un comando c3c que compile todo
-
 # Compilation rules for *.c3 files.
-obj-$(ARCH)/%.c3.o: src/%.c3 Makefile
+$(BUILD_FOLDER)/%.c3.o: src/%.c3 Makefile
 	mkdir -p "$$(dirname $@)"
 	c3c compile-only --single-module=yes --link-libc=no --use-stdlib=no --emit-stdlib=no $< -o $@
 
 # Compilation rules for *.c files.
-obj-$(ARCH)/%.c.o: src/%.c Makefile
+$(BUILD_FOLDER)/%.c.o: src/%.c Makefile
 	mkdir -p "$$(dirname $@)"
 	$(CC) $(CFLAGS) $(CPPFLAGS) -c $< -o $@
 
-# Remove object files and the final executable.
-.PHONY: clean
 clean:
-	rm -rf bin-$(ARCH) obj-$(ARCH)
+	rm -rf $(BUILD_FOLDER)
